// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoryPromo list base should render correctly 1`] = `
<div>
  <ul
    class="StoryPromoUl-sc-171lqjd-2 brjIMO"
    role="list"
  >
    <li
      class="StoryPromoLiBase-sc-171lqjd-0 eFgoJR"
      role="listitem"
    >
      <div
        class="StoryPromoWrapper-sc-1dvfmi3-0 buBJys"
      >
        <div
          class="ImageGridItem-sc-1xk56cj-0 fNYKlW"
          dir="ltr"
        >
          <div
            class="ImageContentsWrapper-sc-1dvfmi3-1 cinwNl"
          >
            <img
              alt="Alt text"
              src="https://foobar.com/image.png"
            />
          </div>
        </div>
        <div
          class="TextGridItem-sc-1lkbq5i-0 jJWtYv"
          dir="ltr"
        >
          <h3
            class="Headline-sc-1dvfmi3-3 geWswX"
          >
            The headline of the promo
          </h3>
          <p
            class="Summary-sc-1dvfmi3-4 dbdrxl"
          >
            The summary of the promo
          </p>
          <time>
            12 March 2019
          </time>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`StoryPromo list base should render correctly without border 1`] = `
<div>
  <ul
    class="StoryPromoUl-sc-171lqjd-2 brjIMO"
    role="list"
  >
    <li
      class="StoryPromoLiBase-sc-171lqjd-0 kPpUUd"
      role="listitem"
    >
      <div
        class="StoryPromoWrapper-sc-1dvfmi3-0 buBJys"
      >
        <div
          class="ImageGridItem-sc-1xk56cj-0 fNYKlW"
          dir="ltr"
        >
          <div
            class="ImageContentsWrapper-sc-1dvfmi3-1 cinwNl"
          >
            <img
              alt="Alt text"
              src="https://foobar.com/image.png"
            />
          </div>
        </div>
        <div
          class="TextGridItem-sc-1lkbq5i-0 jJWtYv"
          dir="ltr"
        >
          <h3
            class="Headline-sc-1dvfmi3-3 geWswX"
          >
            The headline of the promo
          </h3>
          <p
            class="Summary-sc-1dvfmi3-4 dbdrxl"
          >
            The summary of the promo
          </p>
          <time>
            12 March 2019
          </time>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`StoryPromo list should render correctly 1`] = `
<div>
  <ul
    class="StoryPromoUl-sc-171lqjd-2 brjIMO"
    role="list"
  >
    <li
      class="StoryPromoLiBase-sc-171lqjd-0 StoryPromoLi-sc-171lqjd-1 burCNM"
      role="listitem"
    >
      <div
        class="StoryPromoWrapper-sc-1dvfmi3-0 buBJys"
      >
        <div
          class="ImageGridItem-sc-1xk56cj-0 fNYKlW"
          dir="ltr"
        >
          <div
            class="ImageContentsWrapper-sc-1dvfmi3-1 cinwNl"
          >
            <img
              alt="Alt text"
              src="https://foobar.com/image.png"
            />
          </div>
        </div>
        <div
          class="TextGridItem-sc-1lkbq5i-0 jJWtYv"
          dir="ltr"
        >
          <h3
            class="Headline-sc-1dvfmi3-3 geWswX"
          >
            The headline of the promo
          </h3>
          <p
            class="Summary-sc-1dvfmi3-4 dbdrxl"
          >
            The summary of the promo
          </p>
          <time>
            12 March 2019
          </time>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`StoryPromo list should render correctly without border 1`] = `
<div>
  <ul
    class="StoryPromoUl-sc-171lqjd-2 brjIMO"
    role="list"
  >
    <li
      class="StoryPromoLiBase-sc-171lqjd-0 StoryPromoLi-sc-171lqjd-1 dHQUAb"
      role="listitem"
    >
      <div
        class="StoryPromoWrapper-sc-1dvfmi3-0 buBJys"
      >
        <div
          class="ImageGridItem-sc-1xk56cj-0 fNYKlW"
          dir="ltr"
        >
          <div
            class="ImageContentsWrapper-sc-1dvfmi3-1 cinwNl"
          >
            <img
              alt="Alt text"
              src="https://foobar.com/image.png"
            />
          </div>
        </div>
        <div
          class="TextGridItem-sc-1lkbq5i-0 jJWtYv"
          dir="ltr"
        >
          <h3
            class="Headline-sc-1dvfmi3-3 geWswX"
          >
            The headline of the promo
          </h3>
          <p
            class="Summary-sc-1dvfmi3-4 dbdrxl"
          >
            The summary of the promo
          </p>
          <time>
            12 March 2019
          </time>
        </div>
      </div>
    </li>
  </ul>
</div>
`;
